fix: change a link style

--- a/shelter/index2.html
+++ b/shelter/index2.html
@@ -20,7 +20,7 @@
             <!--NAVIGATION LEFT-SIDE-->
             <div class="navigation-logo">
                 <h1 class="title-primary">
-                    <a href="#">COZY HOUSE</a>
+                    <a href="index.html">COZY HOUSE</a>
                 </h1>
                 <h2 class="title-second">
                     Shelter for pets in Boston 
