--- a/shelter/index.html
+++ b/shelter/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="img/1.png">
     <link href="https://fonts.cdnfonts.com/css/georgia" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/normalize.css">
@@ -32,8 +33,8 @@
             <ul class="menu-right">
                 <li class="menu-item"><a href="#">About the shelter</a></li>
                 <li class="menu-item"><a href="index2.html">Our pets</a></li>
-                <li class="menu-item"><a href="#">Help the shelter</a></li>
-                <li class="menu-item"><a href="#">Contacts</a></li>
+                <li class="menu-item"><a href="index2.html">Help the shelter</a></li>
+                <li class="menu-item"><a href="index2.html">Contacts</a></li>
             </ul>
         </nav>
     <!--HEADER -->
@@ -246,7 +247,7 @@
 <!--  CENTER END -->
         <div class="part-two-wrapper-bottom">
             <div class="part-two-wrapper-bottom-button">
-            <button><a href="#">Get to know the rest</a></button>
+            <button><a href="index2.html">Get to know the rest</a></button>
         </div>
         <!-- BTN on 320 px -->
         <div class="part-two-wrapper-center-arrow">
@@ -280,15 +281,15 @@
         <div class="help-shelter-bottom">
             <div class="help-shelter-item">
                 <ul class="shelter-item-icon">
-                    <li class="shelter-item-li"><img src="img/1.png" alt=""><a href="#">Pet food</a></li>
-                    <li class="shelter-item-li"><img src="img/2.png" alt=""><a href="#">Transportation   </a></li>
-                    <li class="shelter-item-li"><img src="img/3.png" alt=""><a href="#">Toys</a></li>
-                    <li class="shelter-item-li"><img src="img/4.png" alt=""><a href="#">Bowls and cups</a></li>
-                    <li class="shelter-item-li"><img src="img/5.png" alt=""><a href="#">Shampoos </a></li>
-                    <li class="shelter-item-li"><img src="img/6.png" alt=""><a href="#">Vitamins</a></li>
-                    <li class="shelter-item-li"><img src="img/7.png" alt=""><a href="#">Medicines</a></li>
-                    <li class="shelter-item-li"><img src="img/8.png" alt=""><a href="#">Collars / leashes</a></li>
-                    <li class="shelter-item-li"><img src="img/9.png" alt=""><a href="#">Sleeping areas</a></li>
+                    <li class="shelter-item-li"><img src="img/1.png" alt=""><span>Pet food</span></li>
+                    <li class="shelter-item-li"><img src="img/2.png" alt=""><span>Transportation</span></li>
+                    <li class="shelter-item-li"><img src="img/3.png" alt=""><span>Toys</span></li>
+                    <li class="shelter-item-li"><img src="img/4.png" alt=""><span>Bowls and cups</span></li>
+                    <li class="shelter-item-li"><img src="img/5.png" alt=""><span>Shampoos </span></li>
+                    <li class="shelter-item-li"><img src="img/6.png" alt=""><span>Vitamins</span></li>
+                    <li class="shelter-item-li"><img src="img/7.png" alt=""><span>Medicines</span></li>
+                    <li class="shelter-item-li"><img src="img/8.png" alt=""><span>Collars / leashes</span></li>
+                    <li class="shelter-item-li"><img src="img/9.png" alt=""><span>Sleeping areas</span></li>
                 </ul>
             </div>
         </div>
